smart web design

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
           <div class="testiminials_img_block">
             <img
               class="testiminials_img"
-              src="./img/testiminials.png"
+              src="./img/testiminials_img.svg"
               alt="#"
             />
           </div>
