smart web design

--- a/index.html
+++ b/index.html
@@ -313,6 +313,177 @@
           </div>
         </div>
       </section>
+      <section class="contact_us">
+        <div class="container">
+          <h2 class="contact_us_title">Contact Us</h2>
+          <form class="form">
+            <label class="name_label" for="name"
+              >Full Name
+              <input
+                class="name_input"
+                required
+                type="text"
+                id="name"
+                placeholder="Enter your full name"
+              />
+            </label>
+            <label class="name_label" for="name"
+              >Email Address
+              <input
+                class="name_input"
+                required
+                type="text"
+                id="name"
+                placeholder="Enter your full name"
+              />
+            </label>
+            <label class="name_label" for="name"
+              >Deadline
+              <input
+                class="name_input"
+                required
+                type="text"
+                id="name"
+                placeholder="Enter your full name"
+              />
+            </label>
+            <label class="name_label" for="name"
+              >Budget
+              <input
+                class="name_input"
+                required
+                type="text"
+                id="name"
+                placeholder="Enter your full name"
+              />
+            </label>
+            <label class="writing_label" for="name"
+              >write us
+              <input
+                class="writing_input"
+                required
+                type="text"
+                id="name"
+                placeholder="Enter your full name"
+              />
+            </label>
+            <button class="input_btn" submit>Submit project</button>
+          </form>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer_block">
+          <div class="footer_logo_block">
+            <div class="footer_logo">
+              <a href="#">
+                <img class="footer_img" src="./img/header_logo.svg" alt="#" />
+              </a>
+            </div>
+            <a class="footer_link" href="#"
+              >Metairie, 3689 Bassel Street, LA, Louisiana</a
+            >
+            <a class="footer_link" href="#">Contact us: 225-788-5489</a>
+            <ul class="footer_media_list">
+              <li class="footer_media_item">
+                <a class="footer_media_link" href="">
+                  <img src="./img/footer_facebook.svg" alt="#" />
+                </a>
+              </li>
+              <li class="footer_media_item">
+                <a class="footer_media_link" href="">
+                  <img src="./img/footer_facebook.svg" alt="#" />
+                </a>
+              </li>
+              <li class="footer_media_item">
+                <a class="footer_media_link" href="">
+                  <img src="./img/footer_facebook.svg" alt="#" />
+                </a>
+              </li>
+              <li class="footer_media_item">
+                <a class="footer_media_link" href="">
+                  <img src="./img/footer_facebook.svg" alt="#" />
+                </a>
+              </li>
+            </ul>
+          </div>
+          <ul class="footer_list">
+            <li class="footer_item">
+              <a class="footer_link_title" href="#"> Category </a>
+            </li>
+            <li class="footer_item">
+              <a class="footer_link" href="#"> Category </a>
+            </li>
+            <li class="footer_item">
+              <a class="footer_link" href="#"> Category </a>
+            </li>
+            <li class="footer_item">
+              <a class="footer_link" href="#"> Category </a>
+            </li>
+            <li class="footer_item">
+              <a class="footer_link" href="#"> Category </a>
+            </li>
+            <li class="footer_item">
+              <a class="footer_link" href="#"> Category </a>
+            </li>
+          </ul>
+          <ul class="footer_list">
+            <li class="footer_item">
+              <a class="footer_link_title" href="#"> Category </a>
+            </li>
+            <li class="footer_item">
+              <a class="footer_link" href="#"> Category </a>
+            </li>
+            <li class="footer_item">
+              <a class="footer_link" href="#"> Category </a>
+            </li>
+            <li class="footer_item">
+              <a class="footer_link" href="#"> Category </a>
+            </li>
+            <li class="footer_item">
+              <a class="footer_link" href="#"> Category </a>
+            </li>
+            <li class="footer_item">
+              <a class="footer_link" href="#"> Category </a>
+            </li>
+          </ul>
+          <div>
+            <form class="footer_form">
+              <h3 class="footer_input_title">Subscribe newsletter</h3>
+              <p class="footer_input_text">
+                Sign up for tips, new offers, and exclusive promos.
+              </p>
+
+              <input
+                type="email"
+                class="footer_input"
+                placeholder="Enter your email"
+              />
+              <button class="footer_btn" submit>Subcribe</button>
+            </form>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="footer_bottom">
+        <div class="container">
+          <div class="footer_bottom_block">
+            <p class="footer_bottom_text">© 2021 Designzcy - All rights reserved.</p>
+            <ul class="footer_bottom_list">
+              <li class="footer_bottom_item">
+                <a class="footer_bottom_link" href="#">Privacy</a>
+              </li>
+              <li class="footer_bottom_item">
+                <a class="footer_bottom_link" href="#">Security</a>
+              </li>
+              <li class="footer_bottom_item">
+                <a class="footer_bottom_link" href="#">Terms</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
