smart web design

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
-    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
   </head>
@@ -327,43 +325,43 @@
                 placeholder="Enter your full name"
               />
             </label>
-            <label class="name_label" for="name"
+            <label class="name_label" for="adress"
               >Email Address
               <input
                 class="name_input"
                 required
                 type="text"
-                id="name"
+                id="adress"
                 placeholder="Enter your full name"
               />
             </label>
-            <label class="name_label" for="name"
+            <label class="name_label" for="deadline"
               >Deadline
               <input
                 class="name_input"
                 required
                 type="text"
-                id="name"
+                id="deadline"
                 placeholder="Enter your full name"
               />
             </label>
-            <label class="name_label" for="name"
+            <label class="name_label" for="budget"
               >Budget
               <input
                 class="name_input"
                 required
                 type="text"
-                id="name"
+                id="budget"
                 placeholder="Enter your full name"
               />
             </label>
-            <label class="writing_label" for="name"
+            <label class="writing_label" for="write"
               >write us
               <input
                 class="writing_input"
                 required
                 type="text"
-                id="name"
+                id="write"
                 placeholder="Enter your full name"
               />
             </label>
@@ -469,7 +467,9 @@
       <div class="footer_bottom">
         <div class="container">
           <div class="footer_bottom_block">
-            <p class="footer_bottom_text">© 2021 Designzcy - All rights reserved.</p>
+            <p class="footer_bottom_text">
+              © 2021 Designzcy - All rights reserved.
+            </p>
             <ul class="footer_bottom_list">
               <li class="footer_bottom_item">
                 <a class="footer_bottom_link" href="#">Privacy</a>
